--- a/src/style.scss
+++ b/src/style.scss
@@ -8,10 +8,16 @@
 }
 
 // Variables
-$primary-color: #333;
-$secondary-color: #666;
-$accent-color: #007bff;
-$font-stack: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+$olive-00: #F6F2E8;
+$olive-01: #D6CDB8;
+$olive-02: #B2A893;
+$olive-03: #988D78;
+$olive-04: #7E725F;
+$japonica-00: #FBA899;
+$japonica-01: #E28272;
+$japonica-02: #CA6556;
+$japonica-03: #B04B3D;
+$font-stack: 'Work Sans', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
 $spacing-unit: 1rem;
 
 // Mixins
@@ -37,13 +43,22 @@ html {
 
 body {
   font-family: $font-stack;
-  color: $primary-color;
-  background-color: #fff;
+  color: $japonica-01;
+  background-color: $olive-00;
 }
 
 // Typography
 h1, h2, h3, h4, h5, h6 {
   margin-bottom: $spacing-unit;
+}
+
+h1 { 
+  font-weight: 400;
+}
+
+h2 {
+  font-weight: 300;
+  color: $olive-03;
 }
 
 p {
