Start work on project details overlay

--- a/src/style.scss
+++ b/src/style.scss
@@ -59,6 +59,7 @@ $spacing-unit: 1rem;
 html {
   font-size: 18px;
   line-height: 1.5;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -67,16 +68,6 @@ body {
   background-color: $olive-00;
   padding: 3 * $spacing-unit;
 }
-
-// Typography
-// h1,
-// h2,
-// h3,
-// h4,
-// h5,
-// h6 {
-//   margin-bottom: $spacing-unit;
-// }
 
 h1 {
   font-size: 3rem;
@@ -125,6 +116,7 @@ p {
     margin: $spacing-unit;
     height: 250px;
     background-color: #b04b3d;
+    cursor: pointer;
     img {
       object-fit: cover;
       width: 100%;
@@ -159,6 +151,71 @@ p {
     height: auto; /* Maintains aspect ratio */
   }
 }
+
+/* Overlay container */
+.project-overlay {
+  display: none; /* Hidden by default */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+  z-index: 1000; /* Ensures it's above other content */
+  align-items: center;
+  justify-content: center;
+}
+
+/* Overlay content */
+.overlay-content {
+  position: relative;
+  background: $olive-00;
+  text-align: center;
+  padding: 2rem 5rem;
+  max-width: 70%;
+  max-height: 70%;
+  overflow: auto;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  h2, p {
+    font-weight: 400
+  }
+  p {
+    color: $olive-03;
+  }
+}
+
+/* Image and caption for project overlay */
+.image-and-caption {
+  display: flex;
+  gap: 20px;
+  align-items: flex-start;
+}
+
+.image-placeholder {
+  width: 200px;
+  height: 120px;
+  background: #d3d3d3; /* Placeholder color */
+}
+
+/* Close button */
+.close-overlay {
+  position: absolute;
+  top: 1.5rem;
+  left: 1.5rem;
+  background-color: transparent;
+  color: $japonica-01;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  i {
+    font-size: large;
+  }
+  &:hover {
+    color: $japonica-03;
+  }
+}
+
+// Contact details
 
 .contact-detail {
   display: flex;
