--- a/src/style.scss
+++ b/src/style.scss
@@ -117,10 +117,16 @@ p {
     height: 250px;
     background-color: #b04b3d;
     cursor: pointer;
+    overflow: hidden;
     img {
       object-fit: cover;
       width: 100%;
       height: 100%;
+      transition: .3s;
+      &:hover {
+        transform: scale(1.3);
+        transform-origin: 50% 50%;
+      }
     }
   }
 }
