--- a/src/style.scss
+++ b/src/style.scss
@@ -122,7 +122,7 @@ p {
       object-fit: cover;
       width: 100%;
       height: 100%;
-      transition: .3s;
+      transition: 0.3s;
       &:hover {
         transform: scale(1.3);
         transform-origin: 50% 50%;
@@ -139,6 +139,8 @@ p {
   padding: 2 * $spacing-unit;
   border: 1px solid $japonica-01; /* Matches the soft red border */
   margin: 2 * $spacing-unit 4 * $spacing-unit;
+  background-color: $olive-00;
+  background-blend-mode: overlay;
   .project-text {
     @include centered-column();
     flex: 3; /* Allows text to take up available space */
@@ -158,9 +160,7 @@ p {
   }
   // hover
   &:hover {
-    background-image: url('./media/paint_texture.png');
-    background-color: $olive-00;
-    background-blend-mode: overlay;
+    background-image: url("./media/paint_texture.png");
     cursor: pointer;
   }
 }
