--- a/src/style.scss
+++ b/src/style.scss
@@ -35,6 +35,10 @@ $spacing-unit: 1rem;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  img {
+    max-width: 100%;
+    height: auto;
+  }
 }
 
 @mixin centered-row {
@@ -196,7 +200,6 @@ figcaption {
   }
   figure {
     margin: 0.9rem;
-    float: right;
   }
 }
 
@@ -262,6 +265,13 @@ figcaption {
 }
 .ml {
   margin-left: 2 * $spacing-unit;
+}
+
+.float-r {
+  float: right;
+}
+.float-l {
+  float: left;
 }
 
 // ID selectors
