--- a/src/style.scss
+++ b/src/style.scss
@@ -88,7 +88,8 @@ h3 {
   margin: 0.6rem 0;
 }
 
-p, figcaption {
+p,
+figcaption {
   margin-bottom: $spacing-unit;
   color: $olive-02;
   font-weight: 300;
@@ -200,6 +201,9 @@ figcaption {
   }
   figure {
     margin: 0.9rem;
+    img {
+      width: 100%;
+    }
   }
 }
 
@@ -223,6 +227,34 @@ figcaption {
   }
   &:hover {
     color: $japonica-03;
+  }
+}
+
+.grid {
+  display: grid;
+  gap: $spacing-unit;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+.two-columns {
+  grid-template-columns: 1fr 1fr;
+}
+
+.funky-grid-1 {
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-auto-rows: minmax(150px, auto);
+  align-items: center;
+  :nth-child(1) {
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
+  }
+  :nth-child(2) {
+    grid-column: 3 / 4;
+    // grid-row: 1 / 3;
   }
 }
 
@@ -272,6 +304,13 @@ figcaption {
 }
 .float-l {
   float: left;
+}
+
+.img-height-180 {
+  img {
+    object-fit: cover;
+    height: 180px;
+  }
 }
 
 // ID selectors
