--- a/src/style.scss
+++ b/src/style.scss
@@ -132,6 +132,7 @@ figcaption {
       object-fit: cover;
       width: 100%;
       height: 100%;
+      transition: 0.3s;
       &:hover {
         transform: scale(1.3);
         transform-origin: 50% 50%;
