Write up NMG project details

--- a/src/style.scss
+++ b/src/style.scss
@@ -35,6 +35,7 @@ $spacing-unit: 1rem;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 1rem;
   img {
     max-width: 100%;
     height: auto;
